2023-11-03T08:08:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6742706369 # 2007
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 8 8
* notice: prev accum: outdated-unq outdated-all / unq all: 286 455 / 295 464
* notice: next accum: outdated-unq outdated-all / unq all: 287 456 / 295 464
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-20] / []

2023-11-01T16:08:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6722107649 # 2002
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-01
* notice: last 14d: unq all: 9 9
* notice: prev accum: outdated-unq outdated-all / unq all: 286 455 / 293 462
* notice: next accum: outdated-unq outdated-all / unq all: 286 455 / 295 464
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-11-01]

2023-10-30T16:08:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6695551373 # 1996
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
* notice: last 14d: unq all: 7 7
* notice: prev accum: outdated-unq outdated-all / unq all: 286 455 / 292 461
* notice: next accum: outdated-unq outdated-all / unq all: 286 455 / 293 462
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-30]

2023-10-30T00:31:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6686772244 # 1994