@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-03T08:08:32Z",
+  "timestamp" : "2023-11-04T00:30:22Z",
   "count_outdated" : 456,
   "uniques_outdated" : 287,
-  "count" : 464,
-  "uniques" : 295,
+  "count" : 466,
+  "uniques" : 296,
   "clones" : [
     {
       "timestamp": "2023-10-29T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
