@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 10,
   "uniques": 8,
   "clones": [
     {
@@ -16,6 +16,11 @@
       "timestamp": "2023-11-01T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
